[package]
name = "backend"
version = "0.1.0"
authors = ["Reto Habluetzel <rethab@protonmail.ch>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_cors = "0.5.1"
diesel = { version = "1.0.0", default-features = false, features = ["postgres", "chrono"] } 
rss = { version = "1.8.0", features = ["from_url"] }
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "2.1.0"
lettre = "0.9"
lettre_email = "0.9"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]