[package]
name = "api"
version = "0.1.0"
authors = ["Reto Habluetzel <rethab@protonmail.ch>"]
edition = "2018"

[dependencies]
lib-db = { path = "../lib-db" } 
rocket = "0.4.2"
rocket_cors = "0.5.1"
rocket_oauth2 = "0.2.0-rc.1"
hyper = "0.10"
hyper-sync-rustls = "=0.3.0-rc.4"
diesel = { version = "1.0.0", default-features = false, features = ["postgres", "chrono"] } 
time = "0.1.42"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_cbor = "0.10.2"
url = "2.1.0"
redis = "0.9.1"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool", "redis_pool"]

