[package]
name = "api"
version = "0.1.0"
authors = ["Reto Habluetzel <rethab@protonmail.ch>"]
edition = "2018"

[dependencies]
lib-channels = { path = "../lib-channels" } 
lib-db = { path = "../lib-db" } 
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = {version = "0.4", features = ["serde"] }
rocket = "0.4.2"
rocket_cors = "0.5.1"
rocket_oauth2 = "0.2.0-rc.1"
diesel = { version = "1.0.0", default-features = false, features = ["postgres", "chrono"] } 
time = "0.1.42"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_cbor = "0.10.2"
redis = "0.9.1"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool", "redis_pool"]

# note that this is duplicated from lib-channels
[dependencies.github-rs]
git = "https://github.com/rethab/github-rs"
branch = "master"
default-features = false
features = ["rust-native-tls"]

