[package]
name = "lib-channels"
version = "0.1.0"
authors = ["Reto Habluetzel <rethab@protonmail.ch>"]
edition = "2018"

[dependencies]
chrono = "0.4"
rss = { version = "1.8", features = ["from_url"] }
atom_syndication = "0.7"
url = "2.1"
reqwest = { version = "0.10", features = ["blocking"] }
kuchiki = "0.8"
serde = "1.0"
serde_json = "1.0"

# note that this is duplicated in api
[dependencies.github-rs]
git = "https://github.com/rethab/github-rs"
branch = "master"
default-features = false
features = ["rust-native-tls"]