[package]
name = "lib-db"
version = "0.1.0"
authors = ["Reto Habluetzel <rethab@protonmail.ch>"]
edition = "2018"

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
diesel = { version = "1.0", default-features = false, features = ["postgres", "chrono"] } 
serde = { version = "1.0", features = ["derive"] }