[package]
name = "lib-digester"
version = "0.1.0"
authors = ["Reto Habluetzel <rethab@protonmail.ch>"]
edition = "2018"


[dependencies]
lib-db = { path = "../lib-db" }
chrono = "0.4"
chrono-tz = "0.5"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }